--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ dependencies:
     - sudo apt-get update
     - sudo apt-get install g++-4.9 -y
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 10
+    - git submodule update --init --recursive
 test:
   override:
     - make
