--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(dep/libuv)
 add_executable(failure-detector
 	src/message/message.cc
 	src/message_queue/message_queue.cc
+	src/peer/peer.cc
 	src/node/node.cc
 	src/main.cc
 )
